fixed background color not covering the entire page

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,15 +1,25 @@
 @media screen and (max-width:800px){
   .container{
     margin: 0;
- 
     display: flex;
     flex-direction: column;
-    height: 100vh;
     background-color: rgb(19, 75, 124);
     color: aqua;
     transition: all ease-in 1s;
     gap: 50px;
   }
-  
+  .main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
+}
+
+@media screen and (min-width:800px) {
+  .container{
+    
+    
+  }
 }
